--- a/PreAssignment.html
+++ b/PreAssignment.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>What is up next?</title>
-        <link href="style.css" rel="stylesheet"/>
+        <link href="Style.css" rel="stylesheet"/>
     </head>
     <body>
     <h1>What's up today?</h1>
