--- a/PreAssignment.html
+++ b/PreAssignment.html
@@ -11,7 +11,7 @@
     <p>Wedding Arrangement</p>
     <p>Live up to your words</p>
     <a href="https://placekitten.com/"> This is a link. </a>
-    <img alt = "cats sitting together" src = "./CrabShellRed.png">
+    <img alt = "cats sitting together" src = "./IMG_20230811_160200.jpg">
     </body>
 
 </html>
