--- a/PreAssignment.html
+++ b/PreAssignment.html
@@ -4,14 +4,12 @@
         <link href="Style.css" rel="stylesheet"/>
     </head>
     <body>
-    <h1>What's up today?</h1>
-    <h2>Check routine:</h2>
-    <p>Diet</p>
-    <p>Exercise</p>
-    <p>Wedding Arrangement</p>
-    <p>Live up to your words</p>
-    <a href="https://placekitten.com/"> This is a link. </a>
-    <img alt = "cats sitting together" src = "./IMG_20230811_160200.jpg">
+    <h1>Rocky Cheng Final Project</h1></h1>
+    <h2>Feature:</h2>
+    <p>Sound Game</p>
+    <p>3D print Controller</p>
+    <a href="https://editor.p5js.org/rockyzhuocheng/full/nWCubYo8n"> This is a link. </a>
+    <img alt = "Blind-OP setup" src = "./IMG_20230811_160200.jpg">
     </body>
 
 </html>
