--- a/Work00/PreAssignment.html
+++ b/Work00/PreAssignment.html
@@ -9,7 +9,7 @@
     <p>Sound Game</p>
     <p>3D print Controller</p>
     <a href="https://editor.p5js.org/rockyzhuocheng/full/nWCubYo8n"> This is a link. </a>
-    <img alt = "Blind-OP setup" src = "./IMG_20230811_160200.jpg">
+    <img alt = "Blind-OP setup" src = "./SoundGame.jpg">
     </body>
 
 </html>
