--- a/Work00/index.html
+++ b/Work00/index.html
@@ -8,7 +8,7 @@
     <h2>Feature:</h2>
     <p>Sound Game</p>
     <p>3D print Controller</p>
-    <a href="https://editor.p5js.org/rockyzhuocheng/full/nWCubYo8n"> This is a link. </a>
+    <a href="https://editor.p5js.org/rockyzhuocheng/full/nWCubYo8n"> This is a link to the game. </a>
     <a href="https://rockyzhuocheng.notion.site/Final-Project-Documentation-be117fd6e2114946abb104999c58863d?pvs=4"> This is the link to the documentation.</a>
     <img alt = "Blind-OP setup" src = "./SoundGame.jpg">
     </body>
