--- a/Work00/index.html
+++ b/Work00/index.html
@@ -5,9 +5,7 @@
     </head>
     <body>
     <h1>Rocky Cheng Final Project</h1></h1>
-    <h2>Feature:</h2>
-    <p>Sound Game</p>
-    <p>3D print Controller</p>
+    <h2>Feature:A sound game, player needs to locate target based on sound source, and shoot at target to score. </h2>
     <p><a href="https://editor.p5js.org/rockyzhuocheng/full/nWCubYo8n"> This is a link to the game. </a></p>
     <p></p><a href="https://rockyzhuocheng.notion.site/Final-Project-Documentation-be117fd6e2114946abb104999c58863d?pvs=4"> This is the link to the documentation.</a></p>
     <img alt = "Blind-OP setup" src = "./SoundGame.jpg" width="600" height="450">
