--- a/Work00/index.html
+++ b/Work00/index.html
@@ -7,6 +7,7 @@
     <h1 style="text-align:center;">Rocky Cheng Final Project</h1></h1>
     <h2 style="text-align:center;">Feature:A sound game, player needs to locate target based on sound source, and shoot at target to score. </h2>
     <p style="text-align:center;"><a href="https://editor.p5js.org/rockyzhuocheng/full/nWCubYo8n"> This is a link to the game. </a></p>
+    <p style="text-align:center;">Note: this version is only playable using the special controller made by me. </p>
     <p style="text-align:center;"><a href="https://rockyzhuocheng.notion.site/Final-Project-Documentation-be117fd6e2114946abb104999c58863d?pvs=4"> This is the link to the documentation.</a></p>
     <p style="text-align:center;"><img alt = "Sound Game setup at the final show" src = "./SoundGame.jpg" width="600" height="450" class="center"></p>
     </body>
