--- a/Work00/index.html
+++ b/Work00/index.html
@@ -10,7 +10,7 @@
     <p style="text-align:center;"><a href="https://editor.p5js.org/rockyzhuocheng/full/nWCubYo8n"> This is a link to the game. </a></p>
     <p style="text-align:center;"><a href="https://rockyzhuocheng.notion.site/Final-Project-Documentation-be117fd6e2114946abb104999c58863d?pvs=4"> This is the link to the documentation.</a></p>
     <p style="text-align:center;"><a href="https://editor.p5js.org/rockyzhuocheng/full/Jpd2Ag0i2">This is a link to the game that player can determine how to deal with the plastic waste.</a></p>
-    <P style="text-align:center;"><a href="https://editor.p5js.org/rockyzhuocheng/full/jBeONGKTM"> This is a link to the game that can be player with your portrait! A camera is needed!</a></P>    
+    <P style="text-align:center;"><a href="https://editor.p5js.org/rockyzhuocheng/full/jBeONGKTM"> This is a link to the game that can be played with your portrait! A camera is needed!</a></P>    
     <p style="text-align:center;"><img alt = "Sound Game setup at the final show" src = "./SoundGame.jpg" width="600" height="450" class="center"></p>
     </body>
 
