--- a/Work00/index.html
+++ b/Work00/index.html
@@ -4,7 +4,7 @@
         <link href="Style.css" rel="stylesheet"/>
     </head>
     <body>
-   <h1 style="text-align:center;">Rocky Cheng Final Project</h1></h1></marquee>
+   <h1 style="text-align:center;">Rocky Cheng Final Project</h1></h1>
   <h2 style="text-align:center;">Feature:A sound game, player needs to locate target based on sound source, and shoot at target to score. </h2>
    <p style="text-align:center;">Note: this version is only playable using the special controller made by me. </p>
   <p style="text-align:center;"><a href="https://editor.p5js.org/rockyzhuocheng/full/nWCubYo8n"> This is a link to the game. </a></p>
