--- a/Week01/index.html
+++ b/Week01/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="myDiv">    
-        <h2></h2>    
+         <h2>Type in your target location:</h2>      
         <form action="/action_page.php">
         <label for="fname">Latitude:</label><br>
         <input type="text" id="lat" name="lat"><br>
