--- a/Week01/index.html
+++ b/Week01/index.html
@@ -32,9 +32,9 @@
 </div>
 <div  class="myDiv">
     <h2>Perhaps you are looking for these locations: </h2>
-    <img src="/emei.jpg" alt="Emei Mountain" class="galleryimg">
-    <img src="/emei.jpg" alt="Emei Mountain" class="galleryimg">
-    <img src="/emei.jpg" alt="Emei Mountain" class="galleryimg">
+    <img src="./emei.jpg" alt="Emei Mountain" class="galleryimg">
+    <img src="./emei.jpg" alt="Emei Mountain" class="galleryimg">
+    <img src="./emei.jpg" alt="Emei Mountain" class="galleryimg">
 </div>
 <div  class="myDiv">
     <section class="gearlist">
