--- a/Week01/index.html
+++ b/Week01/index.html
@@ -17,7 +17,7 @@
         <button  class="button button1" type="button">Block</button>
         <button  class="button button1" type="button">Dome</button>
 
-    <img src="/emei.jpg" alt="Emei Mountain" class="project_img">
+    <img src="./emei.jpg" alt="Emei Mountain" class="project_img">
     </div>
 
     <div class="myDiv">    
