--- a/Week02/index.html
+++ b/Week02/index.html
@@ -7,10 +7,10 @@
     <title>2-sentence story</title>
 </head>
 <body id="bg">
-    <script src="app.js"></script>
+<script src="app.js"></script>
 <section id = "buttonContainer" class="mid_section">
 <button  id="textbox" class="button button1" type="button" onclick = "changeContent()" onmouseover="revealStory()" onmouseleave="hideStory()">
-    Move your mouse here when you finish reading.
+    Move your mouse here when you finish reading this line.
 </button>
 </section>
 </body>
