--- a/Project01/index.html
+++ b/Project01/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>Guess who am I?</header>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
     <script src="app.js"></script>
     <section id="page_header_section" class="page_header_section">
         <h1 id="page_desc" class="page_desc">Pick the right name!</h1>
@@ -16,7 +16,7 @@
     </section>
 
     <section class="page_imgSection">
-        <img width="192" id="page_img"/>
+        <img width="192" id="page_img" alt="Pokemon Image here"/>
     </section>
 
     <div class="flex-container">
@@ -25,7 +25,6 @@
         <div><button id="option_02" class="page_button"></button></div>
         <div><button id="option_03" class="page_button"></button></div>
       </div>
-
 
     <footer>
         <p></p>
