--- a/Project01/index.html
+++ b/Project01/index.html
@@ -15,7 +15,7 @@
         <p id="page_score" class="page_score">Score: 0</p>
     </section>
 
-    <section class="page_imgSection">
+    <section class="page_imgSection" id="page_imgSection">
         <img width="192" id="page_img" alt="Pokemon Image here"/>
     </section>
 
