--- a/Project01/index.html
+++ b/Project01/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mystyle.css">
     <title>Pokemon Master</title>
 </head>
+
 <body>
     <header>Guess who am I?</header>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
@@ -16,7 +18,7 @@
     </section>
 
     <section class="page_imgSection" id="page_imgSection">
-        <img width="192" id="page_img" alt="Pokemon Image here"/>
+        <img width="0" id="page_img" alt="Pokemon Image here" class="page_img" />
     </section>
 
     <div class="flex-container">
@@ -24,10 +26,11 @@
         <div><button id="option_01" class="page_button"></button></div>
         <div><button id="option_02" class="page_button"></button></div>
         <div><button id="option_03" class="page_button"></button></div>
-      </div>
+    </div>
 
     <footer>
         <p></p>
-      </footer>
+    </footer>
 </body>
+
 </html>
