--- a/Project01/index.html
+++ b/Project01/index.html
@@ -33,7 +33,7 @@
         <p></p>
     </footer>
 
-    <audio autoplay loop>
+    <audio control autoplay loop>
         <source src="/SoundFile/20.ogg" type="audio/ogg">
     </audio>
 </body>
