--- a/Project01/index.html
+++ b/Project01/index.html
@@ -34,7 +34,7 @@
     </footer>
 
     <audio control autoplay loop>
-        <source src="/SoundFile/20.ogg" type="audio/ogg">
+        <source src="./SoundFile/20.ogg" type="audio/ogg">
     </audio>
 </body>
 
