--- a/Project01/index.html
+++ b/Project01/index.html
@@ -23,6 +23,7 @@
 
     <section class="page_imgSection" id="page_imgSection">
         <img width="0" id="page_img" alt="Pokemon Image here" class="page_img" />
+        <img class = "page_canvas"/>
         <img id="page_dfruit" class="page_dfruit" />
     </section>
 
