--- a/Project01/index.html
+++ b/Project01/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <audio controls loop>
+    <!-- <audio controls loop>
         <source src="./SoundFile/20.ogg" type="audio/ogg">
-    </audio>
+    </audio> -->
     <header>Guess who am I?</header>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
